[gd_scene load_steps=5 format=3 uid="uid://coom2gtmojaa0"]

[ext_resource type="Script" path="res://answer_spawn.gd" id="1_vwc8m"]
[ext_resource type="PackedScene" uid="uid://ccxoogwvxqww5" path="res://incorrect_answers.tscn" id="2_fxttj"]
[ext_resource type="FontFile" uid="uid://dgba8l3ee6gl6" path="res://Xolonium-Regular.ttf" id="3_8gdoj"]

[sub_resource type="Curve2D" id="Curve2D_t1bcr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 40, -240, 0, 0, 0, 0, 864, -248, 0, 0, 0, 0, 452, -288, 0, 0, 0, 0, 216.227, -260, 0, 0, 0, 0, 40, -240)
}
point_count = 5

[node name="AnswerSpawn" type="Node2D"]
script = ExtResource("1_vwc8m")
Answers = ExtResource("2_fxttj")

[node name="MobPath" type="Path2D" parent="."]
position = Vector2(-10.7184, 258)
scale = Vector2(1.4, 1.2)
curve = SubResource("Curve2D_t1bcr")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(40, -240)
rotation = -0.00970843

[node name="QuestionLabel" type="RichTextLabel" parent="."]
offset_left = 316.0
offset_right = 1155.0
offset_bottom = 129.0
theme_override_fonts/normal_font = ExtResource("3_8gdoj")
theme_override_font_sizes/normal_font_size = 23
bbcode_enabled = true

[node name="CompoundLabel" type="RichTextLabel" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 940.0
offset_top = 159.0
offset_right = 1145.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_8gdoj")
theme_override_font_sizes/normal_font_size = 41
bbcode_enabled = true

[node name="StartButton" type="Button" parent="."]
offset_left = 443.0
offset_top = 283.0
offset_right = 682.0
offset_bottom = 348.0
theme_override_fonts/font = ExtResource("3_8gdoj")
theme_override_font_sizes/font_size = 40
text = "Start Level"
metadata/_edit_use_anchors_ = true

[node name="QuestionNum" type="Label" parent="."]
offset_left = 943.0
offset_top = 101.0
offset_right = 1087.0
offset_bottom = 170.0
theme_override_fonts/font = ExtResource("3_8gdoj")
theme_override_font_sizes/font_size = 25

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
